# Strader

./: .env.template  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CurrentStatus.md  DaysActivity.md  README.md  README_EXCEL.md  hello_schwab.py  intent.yaml  manifest  poll_to_excel.py  requirements.txt  stream_to_excel.py
.beads/: PRIME.md  (+4 more)
web/: .env.example  .gitattributes  README.md  docker-compose.yml  pyproject.toml
web/backend/: Dockerfile  init.sql  requirements.txt
web/backend/app/: config.py  main.py
web/backend/app/core/: config.py  database.py  redis.py
web/backend/app/models/: __init__.py  position.py  schemas.py  trade.py
web/backend/app/routers/: market.py  options.py  pnl.py  positions.py  risk.py  trades.py
web/backend/app/schemas/: options.py
web/backend/app/services/: account.py  alerts.py  market_data.py  options_chain.py  pnl.py  positions.py  risk_engine.py  schwab_client.py  trade_builder.py
web/backend/app/websocket/: manager.py
web/backend/app/ws/: manager.py
web/backend/migrations/: init.sql
web/backend/tests/: test_trade_builder.py
web/frontend/: index.html  package.json
web/frontend/src/: App.tsx
web/frontend/src/api/: client.ts
web/frontend/src/components/: Layout.tsx  MarketContextBar.tsx  OptionsChain.tsx  PnLChart.tsx  PositionDashboard.tsx  RiskPanel.tsx  TradeBuilder.tsx
web/frontend/src/hooks/: useKeyboard.ts  usePolling.ts  useWebSocket.ts
web/frontend/src/services/: api.ts  websocket.ts
web/frontend/src/store/: index.ts
web/frontend/src/styles/: global.css
web/nginx/: nginx.conf
(+85 files in other folders)
